--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -10,6 +10,9 @@ train:
   # which overwrites this setting.
   wrap_o2nc: False
 
+  # volumization
+  use_volumization: True
+
   # random scaling options. supports "exponential".
   random_scaling: null
   random_scaling_seed: 0  # to be deprecated. we should only use one global random seed and generate sub-keys by jr.split()
