--- a/conf/optimizer/muon.yaml
+++ b/conf/optimizer/muon.yaml
@@ -8,8 +8,17 @@ momentum: 0.95
 nesterov: True
 ns_steps: 6
 
+use_l2: False
+
+muon_beta2: null
+
 adam_lr: 3e-4
 adam_beta1: 0.95
 adam_beta2: 0.95
 adam_eps: 1e-8
 adam_wd: 0.0
+
+offset_beta: null
+igt_beta: 0.0
+
+muon_offset_beta: null
