--- a/conf/optimizer/muon.yaml
+++ b/conf/optimizer/muon.yaml
@@ -2,13 +2,15 @@ name: muon
 defaults:
   - lr_config: linear
 lr_config:
-  lr: 0.05
+  lr: 0.01
 
 momentum: 0.95
+beta2: 0.0
+postcondition: False
 nesterov: True
 ns_steps: 6
 
-adam_lr: 3e-4
+adam_lr: 0.03
 adam_beta1: 0.95
 adam_beta2: 0.95
 adam_eps: 1e-8
